--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
   <div class="content-section">
     <h3>Building BuyETHaddress</h3>
-    <p>I launched <strong>buyethaddress.com in summer of 2025</strong>, building a portfolio of over 1,800 premium domains. Every name was secured by hardware wallets, every listing was transparent, and every lease came with a price-lock guarantee.</p>
+    <p>I launched <strong>buyethaddress.com in summer of 2025</strong>, building a portfolio of over 2,000 Real World Utility domains. Every name was secured by hardware wallets, every listing was transparent, and every lease came with a price-lock guarantee.</p>
 
     <h4>My Strategy is Simple:</h4>
     <ul>
@@ -190,7 +190,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div style="text-align:center;margin-top:40px">
-    <a href="mailto:ensv2marketplace@outlook.com" style="display:inline-block;background:var(--accent);color:#fff;font-weight:800;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #8a6a2f">
+    <a href="/cdn-cgi/l/email-protection#d8bdb6abaeeab5b9aab3bdaca8b4b9bbbd98b7adacb4b7b7b3f6bbb7b5" style="display:inline-block;background:var(--accent);color:#fff;font-weight:800;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #8a6a2f">
       Get in Touch
     </a>
   </div>
@@ -202,9 +202,4 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <h3>ENSV2 Marketplace</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
-  </div>
-</footer>
-
-</body>
-</html>
+    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified a
