--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ENSV2™ Marketplace - Real World ENS Utility Domains</title>
+<title>ENSv2 Marketplace™ - Real World ENS Utility Domains</title>
 <meta name="description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, validators, staking and blockchain infrastructure.">
 <meta name="keywords" content="real world utility ENS domains, ENS marketplace, buy ENS domains, lease ENS domains, ENS names for sale, Ethereum Name Service, ENSv2, subdomain leasing, hierarchical subdomains, ens.tools, AI agent domains, DeFi domains, blockchain domains, Web3 domains, ETH domains, ENS names, official ENS, ENS valuation, ENS investment, Layer2 domains, validator domains, staking domains, infrastructure domains, decentralized domains, ethereum domains, RWA domains, crypto domains, ENS subdomains, agentic domains, ZK domains">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.ensv2marketplace.com/">
-<meta property="og:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
+<meta property="og:title" content="ENSv2 Marketplace™ - Real World ENS Utility Domains">
 <meta property="og:description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, and blockchain infrastructure.">
 <meta property="og:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://www.ensv2marketplace.com/">
-<meta property="twitter:title" content="ENSV2™ Marketplace - Real World ENS Utility Domains">
+<meta property="twitter:title" content="ENSv2 Marketplace™ - Real World ENS Utility Domains">
 <meta property="twitter:description" content="Real world utility ENS marketplace with over 2100 domains. Buy or lease official Ethereum Name Service names for DeFi, AI, Layer2, and blockchain infrastructure.">
 <meta property="twitter:image" content="https://www.ensv2marketplace.com/ENSV2newLogo.png">
 
 <!-- Additional SEO -->
 <meta name="robots" content="index, follow">
 <meta name="language" content="English">
-<meta name="author" content="ENSV2™ Marketplace">
+<meta name="author" content="ENSv2 Marketplace™">
 <link rel="canonical" href="https://www.ensv2marketplace.com/">
 
 <!-- Schema.org Structured Data -->
@@ -36,7 +36,7 @@
       "@type": "WebSite",
       "@id": "https://www.ensv2marketplace.com/#website",
       "url": "https://www.ensv2marketplace.com/",
-      "name": "ENSV2™ Marketplace",
+      "name": "ENSv2 Marketplace™",
       "description": "Enterprise-grade real world utility ENS domains across 24 categories including AI & Agents, Blockchain Infrastructure, DeFi, Privacy & ZK, and more.",
       "publisher": {
         "@id": "https://www.ensv2marketplace.com/#organization"
@@ -53,7 +53,7 @@
     {
       "@type": "Organization",
       "@id": "https://www.ensv2marketplace.com/#organization",
-      "name": "ENSV2™ Marketplace",
+      "name": "ENSv2 Marketplace™",
       "url": "https://www.ensv2marketplace.com/",
       "logo": {
         "@type": "ImageObject",
@@ -163,6 +163,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   border: 1px solid var(--edge);
   border-radius: 12px;
   overflow: hidden;
+  scroll-margin-top: 700px;
   transition: all 0.3s ease;
   cursor: pointer;
   position: relative;
@@ -397,13 +398,14 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   }
 }
 </style>
+</head>
+<body>
 
 <nav>
   <div class="wrap">
-    <a href="index.html" class="nav-home active">Home</a>
+    <a href="/" class="nav-home active">Home</a>
     <a href="suites.html" class="nav-suites">Suites</a>
     <a href="subdomain-leasing.html" class="nav-subdomain">Subdomain Leasing</a>
-    <a href="featured.html" class="nav-featured">Featured Names</a>
     <a href="faq.html" class="nav-faq">FAQ</a>
     <a href="mission.html" class="nav-mission">Mission</a>
     <a href="roadmap.html" class="nav-roadmap">Roadmap</a>
@@ -446,12 +448,12 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         <div>
           <div style="display:inline-block;position:relative">
             <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2<sup style="font-size:2.5rem;vertical-align:super;margin-left:4px">™</sup>
+              ENSv2
             </h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
           <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
+            Marketplace<sup style="font-size:1.5rem;vertical-align:super;margin-left:4px;color:#9aa0a6">™</sup>
           </h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
           <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
@@ -462,9 +464,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       <div style="margin:20px 0">
         <div style="color:#cfe1ff;font-size:15px;margin-bottom:12px">📧 <strong>Contact us for suites or direct communication</strong></div>
         <div style="display:flex;align-items:center;gap:12px;justify-content:center;flex-wrap:wrap;margin-bottom:12px">
-          <a href="mailto:ensv2marketplace@outlook.com" style="display:inline-flex;align-items:center;gap:6px;background:#6c757d;color:#fff;font-weight:700;border-radius:8px;padding:8px 14px;text-decoration:none;border:1px solid #5a6268;transition:all 0.2s">
+          <a id="contactEmailBtn" href="#" onclick="this.href='mailto:ensv2marketplace@outlook.com'" style="display:inline-flex;align-items:center;gap:6px;background:#6c757d;color:#fff;font-weight:700;border-radius:8px;padding:8px 14px;text-decoration:none;border:1px solid #5a6268;transition:all 0.2s">
             <span>📧</span>
-            <span>ensv2marketplace@outlook.com</span>
+            <span id="contactEmailDisplay"></span>
           </a>
         </div>
         <div style="color:#9aa0a6;font-size:12px">⚠️ Emails with attachments will be deleted.</div>
@@ -501,9 +503,6 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     
   </div>
 </header>
-
-</head>
-<body>
 
 <main>
 <div class="wrap">
@@ -548,9 +547,9 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
 <div class="wrap">
-  <h3>About ENSV2™ Marketplace</h3>
+  <h3>About ENSv2 Marketplace™</h3>
   <p>We specialize in premium Ethereum Name Service domains across 24 categories including AI & Agents, Blockchain Infrastructure, DeFi, Privacy & ZK, Restaking, and more. All ENS names are stored in hardware wallets for maximum security. Subdomain leasing coming soon with ENSv2.</p>
-  <p style="margin:20px 0;font-size:16px"><strong>Contact us:</strong> <a href="mailto:ensv2marketplace@outlook.com" style="color:var(--accent);text-decoration:none;font-weight:700">ensv2marketplace@outlook.com</a></p>
+  <p style="margin:20px 0;font-size:16px"><strong>Contact us:</strong> <a id="footerEmailLink" href="#" onclick="this.href='mailto:ensv2marketplace@outlook.com'" style="color:var(--accent);text-decoration:none;font-weight:700"><span id="footerEmailDisplay"></span></a></p>
   <div style="color:var(--muted);font-size:13px">
     <p style="margin:8px 0">© 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
@@ -558,7 +557,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 </footer>
 
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 const domainData = {
   "000crypto": {"categories": ["22c"], "price": 5.5, "lease": 600, "desc": "Memorable numeric crypto branding. Perfect for token indices, DeFi platforms, or digital asset aggregators."},
   "000digital": {"categories": ["22c"], "price": 5.5, "lease": 600, "desc": "Premium numeric digital identity. Ideal for Web3 platforms, NFT collections, or crypto indexing services."},
@@ -3094,21 +3093,23 @@ searchInput.addEventListener('input', (e) => {
       div.addEventListener('mouseout', function(){ this.style.background='#0f1420'; this.style.borderColor='#25304a'; });
       div.addEventListener('click', function() {
         var t = this.dataset.name;
+        document.getElementById('searchResults').style.display = 'none';
+        document.getElementById('domainSearch').value = '';
         document.querySelector('.main-cat[data-cat="all"]').click();
         setTimeout(function() {
           document.querySelectorAll('.domain-card').forEach(function(card) {
-            var n = card.querySelector('.domain-name').textContent.replace('.eth','');
+            var nameEl = card.querySelector('.domain-name');
+            if (!nameEl) return;
+            var n = nameEl.textContent.replace('.eth','').trim();
             if (n === t) {
-              document.getElementById('searchResults').style.display = 'none';
-              document.getElementById('domainSearch').value = '';
               card.classList.remove('hidden');
-              card.scrollIntoView({ behavior: 'smooth', block: 'center' });
+              card.scrollIntoView({ behavior: 'smooth', block: 'start' });
               card.style.transform = 'scale(1.05)';
               card.style.boxShadow = '0 0 30px rgba(59,130,246,0.6)';
               setTimeout(function(){ card.style.transform=''; card.style.boxShadow=''; }, 2000);
             }
           });
-        }, 100);
+        }, 300);
       });
       searchResults.appendChild(div);
     });
@@ -3140,6 +3141,16 @@ function showLeasePopup(price) {
   alert('Subdomain leasing coming soon!\n\nWaiting for ENSv2 to launch on Ethereum L1. Once available, you\'ll be able to lease subdomains for $' + price + '/year.\n\nIf you are interested in sub-leasing this domain, please send us an email at ensv2marketplace@outlook.com.\n\nThank you!');
 }
 
+// Build email at runtime to prevent Cloudflare obfuscation
+(function() {
+  var u = 'ensv2marketplace';
+  var d = 'outlook.com';
+  var email = u + '@' + d;
+  var display = document.getElementById('contactEmailDisplay');
+  var footerDisplay = document.getElementById('footerEmailDisplay');
+  if (display) display.textContent = email;
+  if (footerDisplay) footerDisplay.textContent = email;
+})();
 </script>
 
 </body>
