--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>About the Founder | ENSV2 Marketplace</title>
-<meta name="description" content="Meet Craig Vsetula, founder of BuyETHaddress and ENSV2 Marketplace. Pioneering the Real World Utility movement in ENS - infrastructure over emojis.">
+<title>About the Founder | ENSv2 Marketplace™</title>
+<meta name="description" content="Meet Craig Vsetula, founder of BuyETHaddress and ENSv2 Marketplace™. Pioneering the Real World Utility movement in ENS - infrastructure over emojis.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; }
 *{box-sizing:border-box}
@@ -59,16 +59,17 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="/">Home</a>
+    <a href="index.html">Home</a>
+    <a href="featured.html">Featured Names</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
-    <a href="featured.html">Featured Names</a>
     <a href="faq.html">FAQ</a>
     <a href="mission.html">Mission</a>
     <a href="roadmap.html">Roadmap</a>
     <a href="about.html" class="active">About</a>
     <a href="consignment.html">Consignment</a>
     <a href="resources.html">Resources</a>
+    <a href="pricing-guide.html">Pricing Guide</a>
   </div>
 </nav>
 
@@ -85,13 +86,11 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
         <div>
           <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
+            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">ENSv2</h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
           <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
+            Marketplace<sup style="font-size:1.5rem;vertical-align:super;margin-left:4px">™</sup>
           </h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
           <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
@@ -138,12 +137,12 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   </div>
 
   <div class="content-section">
-    <h3>Evolution to ENSV2 Marketplace</h3>
-    <p>As the platform grew and ENSv2&rsquo;s launch approached, it became clear the brand needed to evolve. <strong>BuyETHaddress was the foundation, but ENSV2 Marketplace is the future.</strong></p>
+    <h3>Evolution to ENSv2 Marketplace™</h3>
+    <p>As the platform grew and ENSv2&rsquo;s launch approached, it became clear the brand needed to evolve. <strong>BuyETHaddress was the foundation, but ENSv2 Marketplace™ is the future.</strong></p>
 
     <p>The new brand better reflects our mission: we&rsquo;re not just selling domains&mdash;we&rsquo;re building the infrastructure for Web3 identity. We&rsquo;re positioning for subdomain leasing at scale, enterprise adoption, and expansion beyond crypto into mainstream business applications.</p>
 
-    <p><strong>ENSV2 Marketplace represents the next phase:</strong> professional infrastructure, real-world utility, and a gateway for businesses to access Web3 naming without speculation games.</p>
+    <p><strong>ENSv2 Marketplace™ represents the next phase:</strong> professional infrastructure, real-world utility, and a gateway for businesses to access Web3 naming without speculation games.</p>
   </div>
 
   <div class="highlight-section">
@@ -165,14 +164,14 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
     <p>This isn&rsquo;t about being anti-creative or anti-short. This is about recognizing that <strong>Web3 infrastructure needs names that work</strong> &mdash; names that developers search for, names that institutional players understand, names that make sense when you see them in a protocol.</p>
 
-    <p><strong>ENSV2 Marketplace is leading this shift.</strong> Our 1,800+ domain portfolio proves the model works. Real builders need real names, and we&rsquo;re here to provide them.</p>
+    <p><strong>ENSv2 Marketplace™ is leading this shift.</strong> Our 2,000+ domain portfolio proves the model works. Real builders need real names, and we&rsquo;re here to provide them.</p>
   </div>
 
   <div class="content-section">
     <h3>Vision Forward</h3>
     <p>With <strong>ENSv2 on the horizon</strong>, scalability and affordability will only amplify the value of this portfolio.</p>
 
-    <p>My goal is to position ENSV2 Marketplace as the <strong>global gateway for subdomain leasing and infrastructure suites</strong> &mdash; a platform where every name is more than a domain, it&rsquo;s enterprise-grade infrastructure for the decentralized web.</p>
+    <p>My goal is to position ENSv2 Marketplace™ as the <strong>global gateway for subdomain leasing and infrastructure suites</strong> &mdash; a platform where every name is more than a domain, it&rsquo;s enterprise-grade infrastructure for the decentralized web.</p>
   </div>
 
   <div class="content-section" style="background:#1a1f2e;border:2px solid var(--accent)">
@@ -183,14 +182,14 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
     <p style="font-style:italic;color:#ddd">Web3 is maturing. Infrastructure needs readable, functional domains. I decided to pioneer that shift &mdash; acquire the names protocols actually need, price them fairly so everyone wins, and prove the RWU model works.</p>
 
-    <p style="font-style:italic;color:#ddd">Our 1,800+ domain portfolio is the proof. Fair prices. Real utility. No speculation games.</p>
+    <p style="font-style:italic;color:#ddd">Our 2,000+ domain portfolio is the proof. Fair prices. Real utility. No speculation games.</p>
 
     <p style="font-style:italic;color:#ddd;margin-bottom:0">The shift has begun. Thank you for being part of it.</p>
     <p style="text-align:right;color:var(--accent);font-weight:700;margin-top:10px">&mdash; Craig Vsetula<br><span style="font-size:14px;font-weight:600;color:#9aa0a6">RWU Pioneer</span></p>
   </div>
 
   <div style="text-align:center;margin-top:40px">
-    <a href="/cdn-cgi/l/email-protection#d8bdb6abaeeab5b9aab3bdaca8b4b9bbbd98b7adacb4b7b7b3f6bbb7b5" style="display:inline-block;background:var(--accent);color:#fff;font-weight:800;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #8a6a2f">
+    <a href="#" onclick="this.href='mailto:ensv2marketplace@outlook.com'" style="display:inline-block;background:var(--accent);color:#fff;font-weight:800;border-radius:10px;padding:12px 24px;text-decoration:none;border:1px solid #8a6a2f">
       Get in Touch
     </a>
   </div>
@@ -200,6 +199,6 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
+    <h3>ENSv2 Marketplace™</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
     <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified a
