--- a/consignment.html
+++ b/consignment.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Domain Consignment Program | ENSV2 Marketplace</title>
+<title>Domain Consignment Program | ENSv2 Marketplace™</title>
 <meta name="description" content="Turn unwanted ENS domains into passive income. 50/50 revenue split forever. We handle renewals, marketing, and sales - you collect checks.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; }
@@ -57,16 +57,17 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="/">Home</a>
+    <a href="index.html">Home</a>
+    <a href="featured.html">Featured Names</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
-    <a href="featured.html">Featured Names</a>
     <a href="faq.html">FAQ</a>
     <a href="mission.html">Mission</a>
     <a href="roadmap.html">Roadmap</a>
     <a href="about.html">About</a>
     <a href="consignment.html" class="active">Consignment</a>
     <a href="resources.html">Resources</a>
+    <a href="pricing-guide.html">Pricing Guide</a>
   </div>
 </nav>
 
@@ -83,14 +84,10 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
         <div>
           <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
+            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">ENSv2</h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
-          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
-          </h2>
+          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">Marketplace<sup style="font-size:1.5rem;vertical-align:super;margin-left:4px">™</sup></h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
           <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
           <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
@@ -135,7 +132,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       <li>50% of sale price when domain sells</li>
       <li>50% of annual subdomain lease revenue</li>
       <li>Zero renewal costs forever</li>
-      <li>Professional marketing in our 1,600+ domain portfolio</li>
+      <li>Professional marketing in our 2,000+ domain portfolio</li>
       <li>Hardware wallet security (Ledger)</li>
     </ul>
 
@@ -143,7 +140,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
     <p style="margin-top:30px;font-size:15px;color:var(--muted)">If you spot a valuable expiring utility domain (RWU only &mdash; infrastructure, DeFi, compliance, protocols), we&rsquo;d appreciate the heads up. No guarantees on acquisition or acceptance, but quality tips help us build the strongest portfolio in ENS.</p>
 
-    <p style="margin-top:25px;font-size:16px;font-weight:700">&#128231; Contact: <a href="mailto:ensv2marketplace@outlook.com">ensv2marketplace@outlook.com</a></p>
+    <p style="margin-top:25px;font-size:16px;font-weight:700">&#128231; Contact: <a href="#" onclick="this.href='mailto:ensv2marketplace@outlook.com'"><span class="__cf_email__" data-cfemail="42272c3134702f2330292736322e232127022d37362e2d2d296c212d2f">[email&#160;protected]</span></a></p>
     <p style="margin-top:10px;font-size:15px">Email subject: <strong>&ldquo;Domain Consignment&rdquo;</strong> or <strong>&ldquo;Expiring Name Tip&rdquo;</strong></p>
     <p style="color:var(--muted);font-size:14px;margin-top:15px">&#9888;&#65039; No guarantees on acceptance. We&rsquo;re selective &mdash; utility names only.</p>
   </div>
@@ -153,11 +150,4 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
-    <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
-  </div>
-</footer>
-
-</body>
-</html>
+    <h3>EN
