--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>FAQ - ENSV2 Marketplace | Frequently Asked Questions</title>
-<meta name="description" content="Frequently asked questions about buying ENS domains and subdomain leasing from ENSV2 Marketplace. Learn about pricing, transfers, suites, and ENSv2.">
+<title>FAQ - ENSv2 Marketplace™ | Frequently Asked Questions</title>
+<meta name="description" content="Frequently asked questions about buying ENS domains and subdomain leasing from ENSv2 Marketplace™. Learn about pricing, transfers, suites, and ENSv2.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
 *{box-sizing:border-box}
@@ -69,16 +69,17 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="/">Home</a>
+    <a href="index.html">Home</a>
+    <a href="featured.html">Featured Names</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
-    <a href="featured.html">Featured Names</a>
     <a href="faq.html" class="active">FAQ</a>
     <a href="mission.html">Mission</a>
     <a href="roadmap.html">Roadmap</a>
     <a href="about.html">About</a>
     <a href="consignment.html">Consignment</a>
     <a href="resources.html">Resources</a>
+    <a href="pricing-guide.html">Pricing Guide</a>
   </div>
 </nav>
 
@@ -95,14 +96,10 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
         <div>
           <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
+            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">ENSv2</h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
-          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
-          </h2>
+          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">Marketplace<sup style="font-size:1.5rem;vertical-align:super;margin-left:4px">™</sup></h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
           <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
           <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
@@ -117,7 +114,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
   <div class="wrap">
     <div class="faq-intro">
       <h2>Frequently Asked Questions</h2>
-      <p>Everything you need to know about buying domains and leasing subdomains from ENSV2 Marketplace.</p>
+      <p>Everything you need to know about buying domains and leasing subdomains from ENSv2 Marketplace™.</p>
     </div>
 
     <!-- GENERAL QUESTIONS -->
@@ -132,7 +129,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
       </div>
 
       <div class="faq-item">
-        <div class="faq-question">How many domains does ENSV2 Marketplace have?</div>
+        <div class="faq-question">How many domains does ENSv2 Marketplace™ have?</div>
         <div class="faq-answer">
           We own <strong>2,100+ premium ENS domains</strong> focused on real-world utility. Infrastructure, DeFi, validators, AI agents, compliance, tax, and protocol-level names. Every domain acquired for $5&ndash;6 registration during bear market conditions.
         </div>
@@ -162,8 +159,8 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         <div class="faq-answer">
           Simple:
           <ul>
-            <li>Browse our <a href="/">full portfolio</a> or <a href="featured.html">featured names</a></li>
-            <li>Email us at <strong><a href="mailto:ensv2marketplace@outlook.com">ensv2marketplace@outlook.com</a></strong> with the domain(s) you want</li>
+            <li>Browse our <a href="index.html">full portfolio</a> or <a href="featured.html">featured names</a></li>
+            <li>Email us at <strong><a href="#" onclick="this.href='mailto:ensv2marketplace@outlook.com'"><span class="__cf_email__" data-cfemail="4623283530742b27342d2332362a272523062933322a29292d6825292b">[email&#160;protected]</span></a></strong> with the domain(s) you want</li>
             <li>We provide pricing and transfer details</li>
             <li>Payment in ETH, transfer via ENS manager</li>
             <li>Domain is yours &mdash; no wallet connection required</li>
@@ -335,11 +332,4 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
-    <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
-    <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
-  </div>
-</footer>
-
-</body>
-</html>
+    <h3>EN
