--- a/mission.html
+++ b/mission.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Mission &amp; Trust | ENSV2 Marketplace</title>
+<title>Mission &amp; Trust | ENSv2 Marketplace™</title>
 <meta name="description" content="Our mission: deliver premium real-world utility ENS domains. Our vision: the trusted gateway for Web3 identity.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
@@ -58,16 +58,17 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="/">Home</a>
+    <a href="index.html">Home</a>
+    <a href="featured.html">Featured Names</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
-    <a href="featured.html">Featured Names</a>
     <a href="faq.html">FAQ</a>
     <a href="mission.html" class="active">Mission</a>
     <a href="roadmap.html">Roadmap</a>
     <a href="about.html">About</a>
     <a href="consignment.html">Consignment</a>
     <a href="resources.html">Resources</a>
+    <a href="pricing-guide.html">Pricing Guide</a>
   </div>
 </nav>
 
@@ -84,14 +85,10 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
         <div>
           <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
+            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">ENSv2</h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
-          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
-            Marketplace
-          </h2>
+          <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">Marketplace<sup style="font-size:1.5rem;vertical-align:super;margin-left:4px">™</sup></h2>
           <div style="font-size:22px;color:#b8964f;font-weight:700;margin-top:12px">Official Enterprise-grade Real World utility ENS domains</div>
           <div style="font-size:18px;color:#b8964f;font-weight:700;margin-top:8px">ENSv2 Hierarchical Subdomain System Coming 2026</div>
           <div style="font-size:18px;color:#6c757d;font-weight:700;margin-top:12px">Never Connect Your Wallet Here!</div>
@@ -124,7 +121,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <h3>Our Vision</h3>
     <p>Build the <strong>trusted gateway for ENSv2 infrastructure</strong>: subdomain leasing at scale, infrastructure suite collections, and accessible pricing for Web3 identity.</p>
 
-    <p>We&rsquo;re positioning ENSV2 Marketplace as the global hub where:</p>
+    <p>We&rsquo;re positioning ENSv2 Marketplace™ as the global hub where:</p>
     <ul>
       <li>Startups find identity infrastructure at affordable rates</li>
       <li>Institutions acquire infrastructure suites for Web3 deployment</li>
@@ -200,7 +197,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
+    <h3>ENSv2 Marketplace™</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
     <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
