--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Resources | ENSV2 Marketplace</title>
+<title>Resources | ENSv2 Marketplace™</title>
 <meta name="description" content="Helpful ENS tools and resources. Research tools, marketplaces, official documentation, and community links for ENS domain management.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; --premium:#c0c0c0; --premiumDark:#8c8c8c; --brandFrom:#5bb1ff; --brandTo:#8b5cf6; --glow:#6df7ff; }
@@ -54,16 +54,17 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <nav>
   <div class="wrap">
-    <a href="/">Home</a>
+    <a href="index.html">Home</a>
+    <a href="featured.html">Featured Names</a>
     <a href="suites.html">Suites</a>
     <a href="subdomain-leasing.html">Subdomain Leasing</a>
-    <a href="featured.html">Featured Names</a>
     <a href="faq.html">FAQ</a>
     <a href="mission.html">Mission</a>
     <a href="roadmap.html">Roadmap</a>
     <a href="about.html">About</a>
     <a href="consignment.html">Consignment</a>
     <a href="resources.html" class="active">Resources</a>
+    <a href="pricing-guide.html">Pricing Guide</a>
   </div>
 </nav>
 
@@ -80,9 +81,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
         </div>
         <div>
           <div style="display:inline-block;position:relative">
-            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">
-              ENSV2
-            </h1>
+            <h1 style="font-family:'Inter',sans-serif;font-weight:700;font-size:8rem;letter-spacing:0.5px;color:#b8964f;margin:0">ENSv2</h1>
             <div style="position:absolute;bottom:20px;left:0;right:0;height:4px;background:linear-gradient(90deg,transparent,#b8964f,transparent)"></div>
           </div>
           <h2 style="font-family:'Inter',sans-serif;font-weight:700;font-size:4rem;letter-spacing:0.5px;color:#9aa0a6;margin:-25px 0 0 0">
@@ -184,8 +183,18 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     </ul>
   </div>
 
+  <div class="content-section">
+    <h3>&#128176; Pricing &amp; Valuation</h3>
+    <ul>
+      <li>
+        <a href="pricing-guide.html">ENS Name Pricing Guide</a>
+        <div class="resource-desc">Our complete 15-tier scoring framework — how every domain in the portfolio is valued and priced</div>
+      </li>
+    </ul>
+  </div>
+
   <div class="content-section" style="background:rgba(184,150,79,0.1);border:2px solid var(--accent)">
-    <p style="margin:0;font-size:15px;line-height:1.8;color:var(--text)"><strong>Why share resources?</strong> We're confident in our 1,800+ curated real-world utility portfolio. These tools help everyone learn ENS - and informed buyers understand the value of infrastructure domains. Rising tide lifts all boats.</p>
+    <p style="margin:0;font-size:15px;line-height:1.8;color:var(--text)"><strong>Why share resources?</strong> We're confident in our 2,000+ curated real-world utility portfolio. These tools help everyone learn ENS - and informed buyers understand the value of infrastructure domains. Rising tide lifts all boats.</p>
   </div>
 
 </div>
@@ -193,7 +202,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
 
 <footer>
   <div class="wrap">
-    <h3>ENSV2 Marketplace</h3>
+    <h3>ENSv2 Marketplace™</h3>
     <p>Premium ENS domain marketplace. All domains secured by Ledger hardware wallets.</p>
     <p style="font-size:13px">&copy; 2025 ensv2marketplace.eth - All ENS names verified and secured</p>
   </div>
