--- a/pricing-guide.html
+++ b/pricing-guide.html
@@ -3,20 +3,20 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ENS Pricing Guide — How to Value & Price ENS Domains | ENSv2 Marketplace™</title>
-<meta name="description" content="The definitive ENS pricing guide. Score any ENS domain 1–15, find its ETH value, and set annual lease rates. Free framework covering 30 categories, 275 subcategories, and ENSv2 subdomain leasing economics.">
-<meta name="keywords" content="ENS pricing guide, ENS domain pricing, how to price ENS domains, ENS domain value, ENS lease rates, ENSv2 subdomain leasing, ETH domain pricing, real world utility ENS">
+<title>ENS Pricing Guide & Taxonomy — How to Value & Price ENS Domains | ENSv2 Marketplace™</title>
+<meta name="description" content="The definitive ENS pricing guide and domain taxonomy. 30 categories, 275 subcategories, score any ENS domain 1–15, find its ETH value and annual lease rate. Free framework for real world utility ENS domains.">
+<meta name="keywords" content="ENS pricing guide, ENS taxonomy, ENS domain taxonomy, ENS domain pricing, how to price ENS domains, ENS domain value, ENS lease rates, ENSv2 subdomain leasing, ETH domain pricing, real world utility ENS">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://www.ensv2marketplace.com/pricing-guide.html">
 <!-- Open Graph -->
-<meta property="og:title" content="ENS Pricing Guide — How to Value & Price ENS Domains">
-<meta property="og:description" content="Score any ENS domain 1–15 and find its ETH value and annual lease rate. The definitive ENS domain pricing framework from ENSv2 Marketplace.">
+<meta property="og:title" content="ENS Pricing Guide & Taxonomy — How to Value & Price ENS Domains">
+<meta property="og:description" content="30 categories, 275 subcategories. Score any ENS domain 1–15 and find its ETH value and annual lease rate. The definitive ENS taxonomy and pricing framework.">
 <meta property="og:url" content="https://www.ensv2marketplace.com/pricing-guide.html">
 <meta property="og:type" content="article">
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="ENS Pricing Guide — How to Value & Price ENS Domains">
-<meta name="twitter:description" content="Score any ENS domain 1–15 and find its ETH value and annual lease rate. Free framework from ENSv2 Marketplace.">
+<meta name="twitter:title" content="ENS Pricing Guide & Taxonomy — How to Value & Price ENS Domains">
+<meta name="twitter:description" content="30 categories, 275 subcategories. Score any ENS domain 1–15 and find its ETH value and annual lease rate. Free from ENSv2 Marketplace.">
 <style>
 :root{ --bg:#0b0c10; --card:#12151d; --edge:#1c2230; --text:#e6e6e6; --muted:#9aa0a6; --accent:#b8964f; }
 *{box-sizing:border-box}
